// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderSystemMessage uses renderer for Channel Display Name update 1`] = `
<Connect(Markdown)
  baseTextStyle={Object {}}
  disableAtChannelMentionHighlight={true}
  onPostPress={[MockFunction]}
  textStyles={Object {}}
  value="{username} updated the channel display name from: {oldDisplayName} to: {newDisplayName}"
/>
`;

exports[`renderSystemMessage uses renderer for Channel Header update 1`] = `
<Connect(Markdown)
  baseTextStyle={Object {}}
  disableAtChannelMentionHighlight={true}
  onPostPress={[MockFunction]}
  textStyles={Object {}}
  value="{username} updated the channel header from: {oldHeader} to: {newHeader}"
/>
`;

exports[`renderSystemMessage uses renderer for Channel Purpose update 1`] = `
<Text
  style={Object {}}
>
  {username} updated the channel purpose from: {oldPurpose} to: {newPurpose}
</Text>
`;

exports[`renderSystemMessage uses renderer for OLD archived channel without a username 1`] = `
<Connect(Markdown)
  baseTextStyle={Object {}}
  disableAtChannelMentionHighlight={true}
  onPostPress={[MockFunction]}
  textStyles={Object {}}
  value="{username} archived the channel"
/>
`;

exports[`renderSystemMessage uses renderer for archived channel 1`] = `
<Connect(Markdown)
  baseTextStyle={Object {}}
  disableAtChannelMentionHighlight={true}
  onPostPress={[MockFunction]}
  textStyles={Object {}}
  value="{username} archived the channel"
/>
`;

exports[`renderSystemMessage uses renderer for unarchived channel 1`] = `
<Connect(Markdown)
  baseTextStyle={Object {}}
  disableAtChannelMentionHighlight={true}
  onPostPress={[MockFunction]}
  textStyles={Object {}}
  value="{username} unarchived the channel"
/>
`;

exports[`renderSystemMessage uses renderer for unarchived channel 2`] = `null`;
